object_classification/src/deployment/opa-external/service-entry.yml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: opa-ext-authz-grpc
spec:
  hosts:
    - "opa-ext-authz-grpc.local"
  exportTo:
    - "."
  ports:
    - name: grpc
      number: 8181
      protocol: GRPC
  resolution: STATIC
  endpoints:
    - address: "130.233.96.72"
