object_classification/src/deployment/opa-external/authorization-policy.yml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ext-authz
  namespace: default # Ensure it matches the namespace where your application is deployed
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway # Replace with the appropriate label for your application
  action: CUSTOM
  provider:
    name: opa-ext-authz-grpc
  rules:
    - to:
        - operation:
            paths: ["*/"]
